--- a/CP01_SERS.ipynb
+++ b/CP01_SERS.ipynb
@@ -1583,7 +1583,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create a new column to identify weekdays and weekends\n",
         "df['DayType'] = df['DayOfWeek'].apply(lambda x: 'Final de semana' if x in ['Saturday', 'Sunday'] else 'Dia de semana')\n",
         "\n",
         "# Calculate the average Global_active_power for each day type\n",
@@ -1673,18 +1672,14 @@
         "outputId": "7290d3d6-7ebe-48a0-9c7d-b5c49b6c546c"
       },
       "source": [
-        "# Filter for summer months (June, July, August) in the Northern Hemisphere\n",
         "summer_months = [6, 7, 8]\n",
         "df_summer = df[df['Date'].dt.month.isin(summer_months)]\n",
         "\n",
-        "# Calculate the average Global_active_power for summer\n",
         "average_power_summer = df_summer['Global_active_power'].mean()\n",
         "\n",
-        "# Filter for winter months (December, January, February) in the Northern Hemisphere\n",
         "winter_months = [12, 1, 2]\n",
         "df_winter = df[df['Date'].dt.month.isin(winter_months)]\n",
         "\n",
-        "# Calculate the average Global_active_power for winter\n",
         "average_power_winter = df_winter['Global_active_power'].mean()\n",
         "\n",
         "print(f\"Consumo médio de energia ativa global no verão (Hemisfério Norte): {average_power_summer:.2f} kW\")\n",
@@ -1722,28 +1717,25 @@
         "outputId": "4c56d3b6-c8fe-4513-a6cf-09df38616066"
       },
       "source": [
-        "# Take a random sample of 1% of the data\n",
-        "df_sample = df.sample(frac=0.01, random_state=42) # Using a random state for reproducibility\n",
+        "df_sample = df.sample(frac=0.01, random_state=42)\n",
         "\n",
-        "# Create histograms for the original and sampled data\n",
         "plt.figure(figsize=(14, 6))\n",
         "\n",
-        "plt.subplot(1, 2, 1) # 1 row, 2 columns, 1st plot\n",
+        "plt.subplot(1, 2, 1)\n",
         "plt.hist(df['Global_active_power'], bins=50, edgecolor='black')\n",
         "plt.xlabel('Global Active Power (kW)')\n",
         "plt.ylabel('Frequency')\n",
         "plt.title('Distribution of Global Active Power (Full Dataset)')\n",
         "plt.grid(True)\n",
         "\n",
-        "plt.subplot(1, 2, 2) # 1 row, 2 columns, 2nd plot\n",
+        "plt.subplot(1, 2, 2)\n",
         "plt.hist(df_sample['Global_active_power'], bins=50, edgecolor='black')\n",
         "plt.xlabel('Global Active Power (kW)')\n",
         "plt.ylabel('Frequency')\n",
         "plt.title('Distribution of Global Active Power (1% Sample)')\n",
         "plt.grid(True)\n",
         "\n",
-        "plt.tight_layout() # Adjust layout to prevent overlapping\n",
-        "plt.show()"
+        "plt.tight_layout()"
       ],
       "execution_count": 28,
       "outputs": [
@@ -1782,18 +1774,13 @@
       "source": [
         "from sklearn.preprocessing import MinMaxScaler\n",
         "\n",
-        "# Identify the numerical columns to scale\n",
-        "# Exclude 'Date', 'Time', 'DayOfWeek', 'Month', 'DayType' as they are not numerical or not suitable for scaling\n",
         "numerical_cols = ['Global_active_power', 'Global_reactive_power', 'Voltage', 'Global_intensity', 'Sub_metering_1', 'Sub_metering_2', 'Sub_metering_3']\n",
         "\n",
-        "# Create a MinMaxScaler object\n",
         "scaler = MinMaxScaler()\n",
         "\n",
-        "# Apply Min-Max scaling to the selected numerical columns\n",
-        "df_scaled = df.copy() # Create a copy to avoid modifying the original DataFrame\n",
+        "df_scaled = df.copy()\n",
         "df_scaled[numerical_cols] = scaler.fit_transform(df_scaled[numerical_cols])\n",
         "\n",
-        "# Display the first few rows of the scaled DataFrame\n",
         "display(df_scaled.head())"
       ],
       "execution_count": 29,
@@ -2175,16 +2162,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5f3436c8"
-      },
-      "source": [
-        "# Task\n",
-        "Aplique K-means para segmentar os dias em 3 grupos distintos de consumo elétrico. Interprete os resultados."
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -2494,13 +2471,10 @@
         "outputId": "334b1391-14e4-4757-c737-0ef132bc291d"
       },
       "source": [
-        "# Select the 'Global_active_power' column\n",
         "daily_power = daily_consumption['Global_active_power']\n",
         "\n",
-        "# Reshape the data into a 2D array for K-means\n",
         "X = daily_power.values.reshape(-1, 1)\n",
         "\n",
-        "# Display the shape of the reshaped data\n",
         "print(f\"Shape of the data for K-means: {X.shape}\")"
       ],
       "execution_count": 31,
@@ -2527,10 +2501,8 @@
       "source": [
         "from sklearn.cluster import KMeans\n",
         "\n",
-        "# Instantiate a KMeans object with n_clusters=3 and a random_state for reproducibility\n",
         "kmeans = KMeans(n_clusters=3, random_state=42, n_init=10)\n",
         "\n",
-        "# Fit the KMeans model to the prepared data X using the .fit() method\n",
         "kmeans.fit(X)"
       ],
       "execution_count": 32,
@@ -3282,14 +3254,11 @@
         "outputId": "3d0fa2a3-abd9-46c6-f8b1-5f21065f40d9"
       },
       "source": [
-        "# Calculate the average consumption for each cluster\n",
         "average_consumption_per_cluster = daily_consumption.groupby('Cluster')['Global_active_power'].mean()\n",
         "\n",
-        "# Display the average consumption per cluster\n",
         "print(\"Average Global Active Power per Cluster:\")\n",
         "display(average_consumption_per_cluster)\n",
         "\n",
-        "# Create a scatter plot\n",
         "plt.figure(figsize=(10, 6))\n",
         "plt.scatter(daily_consumption.index, daily_consumption['Global_active_power'], c=daily_consumption['Cluster'], cmap='viridis')\n",
         "plt.xlabel('Day Index')\n",
@@ -3396,17 +3365,13 @@
         "outputId": "1b9d0ea4-0e6f-4775-a88e-59a68b5c6a15"
       },
       "source": [
-        "# Ensure 'Date' column is datetime objects\n",
         "df['Date'] = pd.to_datetime(df['Date'])\n",
         "\n",
-        "# Define the start and end dates for a 6-month period in 2007\n",
         "start_date = '2007-01-01'\n",
         "end_date = '2007-06-30'\n",
         "\n",
-        "# Filter the DataFrame for the defined period\n",
         "df_period = df[(df['Date'] >= start_date) & (df['Date'] <= end_date)].copy()\n",
         "\n",
-        "# Display the first few rows of the filtered DataFrame\n",
         "display(df_period.head())"
       ],
       "execution_count": 35,
@@ -3780,14 +3745,11 @@
         "outputId": "4605d99b-6391-4821-8fff-e779451eaa29"
       },
       "source": [
-        "# Combine 'Date' and 'Time' columns to create a 'Datetime' index\n",
         "df_period['Datetime'] = pd.to_datetime(df_period['Date'].astype(str) + ' ' + df_period['Time'])\n",
         "df_period.set_index('Datetime', inplace=True)\n",
         "\n",
-        "# Resample 'Global_active_power' to daily frequency and calculate the mean\n",
         "daily_power_series = df_period['Global_active_power'].resample('D').mean()\n",
         "\n",
-        "# Display the first few entries of the resampled time series\n",
         "display(daily_power_series.head())"
       ],
       "execution_count": 36,
@@ -3866,25 +3828,12 @@
         "id": "9sDDbNaHIEl3"
       },
       "source": [
-        "# Handle missing values by interpolating them\n",
         "daily_power_series_filled = daily_power_series.interpolate()\n",
         "\n",
-        "# Apply seasonal_decompose to the filled daily_power_series\n",
         "decomposition = seasonal_decompose(daily_power_series_filled, model='additive', period=7)"
       ],
       "execution_count": 38,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "6790a988"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "Plot the results of the seasonal decomposition to visualize the trend, seasonality, and residuals.\n",
-        "\n"
-      ]
     },
     {
       "cell_type": "code",
@@ -3897,7 +3846,6 @@
         "outputId": "ecbca60b-ca1b-4848-f866-b6399689ade4"
       },
       "source": [
-        "# Plot the decomposed time series\n",
         "fig = decomposition.plot()\n",
         "fig.set_size_inches(12, 8)\n",
         "plt.suptitle('Time Series Decomposition of Daily Global Active Power (6 Months)', y=1.02)\n",
@@ -3928,15 +3876,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ZaBKyTQhJOQ0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3946,7 +3885,6 @@
         "outputId": "af9b91ad-9cad-4cf4-d994-eac36e20652d"
       },
       "source": [
-        "# Define the feature matrix (X) and target variable (y)\n",
         "X = df[['Global_intensity']]\n",
         "y = df['Global_active_power']\n",
         "\n",
@@ -4340,10 +4278,8 @@
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "\n",
-        "# Instantiate a LinearRegression object\n",
         "model = LinearRegression()\n",
         "\n",
-        "# Fit the instantiated model to the training data\n",
         "model.fit(X_train, y_train)"
       ],
       "execution_count": 43,
@@ -4788,10 +4724,8 @@
         "outputId": "fc3c6d3f-0b2b-4e75-ba0f-9c46f42f0780"
       },
       "source": [
-        "# Use the trained model to make predictions on the testing data\n",
         "y_pred = model.predict(X_test)\n",
         "\n",
-        "# Display the first few predictions\n",
         "print(\"First 5 predictions:\")\n",
         "print(y_pred[:5])"
       ],
@@ -4819,13 +4753,10 @@
       "source": [
         "from sklearn.metrics import mean_squared_error, r2_score\n",
         "\n",
-        "# Calculate the Mean Squared Error (MSE)\n",
         "mse = mean_squared_error(y_test, y_pred)\n",
         "\n",
-        "# Calculate the R-squared score\n",
         "r2 = r2_score(y_test, y_pred)\n",
         "\n",
-        "# Print the calculated metrics\n",
         "print(f\"Mean Squared Error (MSE): {mse:.4f}\")\n",
         "print(f\"R-squared (R2): {r2:.4f}\")"
       ],
